--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -56,7 +56,7 @@
                     <ImageView
                         android:layout_width="100dp"
                         android:layout_height="100dp"
-                        android:background="@drawable/ic_account_box_black_24dp"/>
+                        android:background="@drawable/background"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
