--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/topper" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="250dp"
