--- a/app/src/main/res/layout/topper.xml
+++ b/app/src/main/res/layout/topper.xml
@@ -26,6 +26,7 @@
             android:textColor="@color/white"
             />
         <ImageView
+            android:id="@+id/right_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
