--- a/app/src/main/res/layout/circleadapter_item.xml
+++ b/app/src/main/res/layout/circleadapter_item.xml
@@ -49,18 +49,20 @@
     </GridView>
 
     <LinearLayout
-        android:id="@+id/layout_praise"
+        android:id="@+id/layout_bottom"
         android:layout_below="@+id/grid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="horizontal">
         <LinearLayout
+            android:id="@+id/layout_pinglun"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center">
             <ImageView
+                android:id="@+id/iv_pinglun"
                 android:layout_width="17dp"
                 android:layout_height="17dp"
                 android:layout_marginRight="5dp"
@@ -71,11 +73,13 @@
                 android:text="评论"/>
         </LinearLayout>
         <LinearLayout
+            android:id="@+id/layout_praise"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center">
             <ImageView
+                android:id="@+id/iv_praise"
                 android:layout_width="17dp"
                 android:layout_height="17dp"
                 android:layout_marginRight="5dp"
