--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -3,10 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bg"
-    >
-
-    <include layout="@layout/topper" />
+    android:background="@drawable/login_bg">
 
     <ImageView
         android:id="@+id/user_icon"
