--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bg">
 
+    <include layout="@layout/topper" />
+
     <ImageView
         android:id="@+id/user_icon"
         android:layout_width="wrap_content"
@@ -28,7 +30,7 @@
             android:text="用户名："
             android:textSize="15sp"/>
         <EditText
-            android:id="@+id/signup_username"
+            android:id="@+id/signup_userid"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
@@ -82,6 +84,19 @@
             android:layout_height="wrap_content"
             android:text="吧"
             android:textColor="@color/white"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/forget_pw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="忘记密码？"
+            android:textColor="@color/sign_text"/>
     </LinearLayout>
 
     <Button
