--- a/app/src/main/res/layout/sign_layout.xml
+++ b/app/src/main/res/layout/sign_layout.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/login_bg">
 
+    <include layout="@layout/topper" />
+
     <ImageView
         android:id="@+id/user_icon"
         android:layout_width="wrap_content"
@@ -27,7 +29,7 @@
             android:text="用户名:"
             android:textSize="15sp"/>
         <EditText
-            android:id="@+id/signup_username"
+            android:id="@+id/signup_userid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -40,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="0dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -51,6 +54,52 @@
             android:id="@+id/signup_pw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="0dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="姓名："
+            android:textSize="15sp"/>
+        <EditText
+            android:id="@+id/signup_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="0dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="证件："
+            android:textSize="15sp"/>
+        <EditText
+            android:id="@+id/signup_idcard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="身份证后六位"
+            android:textSize="15sp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
