--- a/app/src/main/res/layout/sign_layout.xml
+++ b/app/src/main/res/layout/sign_layout.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:cursorVisible="false"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -55,6 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:cursorVisible="false"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -77,6 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:cursorVisible="false"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -101,6 +104,7 @@
             android:hint="身份证后六位"
             android:textSize="15sp"
             android:layout_gravity="center_vertical"
+            android:cursorVisible="false"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
