--- a/app/src/main/res/layout/update_layout.xml
+++ b/app/src/main/res/layout/update_layout.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/topper" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +23,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
 
@@ -40,6 +43,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
 
@@ -59,6 +63,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
 
@@ -78,6 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
 
@@ -97,6 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="5"
+            android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
 
