--- a/app/src/main/res/layout/circleadapter_item.xml
+++ b/app/src/main/res/layout/circleadapter_item.xml
@@ -36,21 +36,21 @@
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="5dp"
         android:layout_below="@+id/layout_headline"
         />
-    <GridView
-        android:id="@+id/grid"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/text">
-    </GridView>
+    <!--<GridView-->
+        <!--android:id="@+id/grid"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_below="@+id/text">-->
+    <!--</GridView>-->
 
     <LinearLayout
         android:id="@+id/layout_bottom"
-        android:layout_below="@+id/grid"
+        android:layout_below="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -85,9 +85,22 @@
                 android:layout_marginRight="5dp"
                 android:background="@drawable/common_praise3x_nor"/>
             <TextView
+                android:id="@+id/tv_praise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="赞"/>
         </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/pinglun"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/layout_bottom"
+        android:orientation="vertical">
+        <ListView
+            android:id="@+id/lv_pinglun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </ListView>
     </LinearLayout>
 </RelativeLayout>
