--- a/app/src/main/res/layout/update_layout.xml
+++ b/app/src/main/res/layout/update_layout.xml
@@ -9,6 +9,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="10dp">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
@@ -102,7 +107,7 @@
             android:id="@+id/newsex"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="4"
             android:cursorVisible="false"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
