--- a/app/src/main/res/layout/circleadapter_item.xml
+++ b/app/src/main/res/layout/circleadapter_item.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:padding="5dp">
     <RelativeLayout
         android:id="@+id/layout_headline"
         android:layout_width="match_parent"
@@ -11,8 +11,8 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/user_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:background="@drawable/common_user_icon"
             />
         <TextView
@@ -20,26 +20,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/user_icon"
             android:text="姓名"
+            android:textColor="#72ACE3"
             android:textSize="15dp"/>
         <TextView
             android:id="@+id/data"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@+id/user_icon"
+            android:layout_marginLeft="21dp"
+            android:layout_below="@+id/name"
             android:text="01-11"
-            android:textSize="15dp"/>
+            android:textSize="13dp"/>
     </RelativeLayout>
 
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="10dp"
         android:layout_below="@+id/layout_headline"
-        />
+        android:text="你好"
+        android:textSize="17dp" />
     <!--<GridView-->
         <!--android:id="@+id/grid"-->
         <!--android:layout_width="match_parent"-->
@@ -53,7 +59,7 @@
         android:layout_below="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal">
         <LinearLayout
             android:id="@+id/layout_pinglun"
