--- a/app/src/main/res/layout/userinfo.xml
+++ b/app/src/main/res/layout/userinfo.xml
@@ -186,6 +186,19 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <Button
+                android:id="@+id/chat"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/colorPrimary"
+                android:text="私信"
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
+
         </LinearLayout>
     </com.example.liubo.world_of_movie.BaseView.MyScrollView>
 
