--- a/app/src/main/res/layout/fragment_circle.xml
+++ b/app/src/main/res/layout/fragment_circle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,6 +7,7 @@
     <include layout="@layout/topper" />
 
     <RelativeLayout
+        android:id="@+id/topstytle"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginBottom="5dp">
@@ -37,6 +38,44 @@
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/topstytle"
         android:listSelector="@android:color/transparent"  >
     </ListView>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/common_bg"
+        android:id="@+id/commentLinear"
+        android:visibility="gone"
+        android:orientation="horizontal">
+        <!-- 输入框 -->
+        <EditText
+            android:id="@+id/commentEdit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#FFFFFF"
+            android:maxLength="100"
+            android:minHeight="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:inputType="textMultiLine"
+            android:gravity="center_vertical"
+            android:maxLines="6"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center_vertical" />
+        <!-- 留言按钮 -->
+        <Button
+            android:id="@+id/commentButton"
+            android:layout_width="60dp"
+            android:layout_height="40dp"
+            android:textColor="#FFFFFF"
+            android:text="发表"
+            android:layout_marginRight="5dp"
+            android:background="@color/ssf_main_color"
+            android:layout_gravity="center_vertical"/>
+    </LinearLayout>
+</RelativeLayout>
